<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ice"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.icehockey.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textColor="#000"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/slovakia_640" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamA"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goalTeamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/team_a_score"
                android:onClick="goalTeamA"
                android:text="@string/goal" />

        </RelativeLayout>

<TextView
    android:layout_width="01dp"
    android:layout_height="match_parent"
    android:background="@android:color/black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-medium"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="#000"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/sweden_640" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teamB"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goalTeamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/team_b_score"
                android:onClick="goalTeamB"
                android:text="@string/goal" />

        </RelativeLayout>

    </LinearLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/shotOnGoalTeamA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="0"
            android:textColor="#000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/shotOnGoalTeamAPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ShotOnGoalA"
            android:text="@string/plus"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:text="@string/shot_on_goal"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shotOnGoalTeamBPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ShotOnGoalB"
            android:text="@string/plus"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/shotOnGoalTeamB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:onClick="ShotOnGoalB"
            android:text="0"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/winnigStreakTeamA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="0"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/winnigStreakTeamAPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="StreakTeamA"
            android:text="@string/plus"
            android:textSize="22sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:text="@string/winnig_streak"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/winnigStreakTeamBplus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="StreakTeamB"
            android:text="@string/plus"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/winnigStreakTeamB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="0"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/penaltytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/ic_notification_overlay"
        android:text="@string/penalty"
        android:textSize="18sp"
        android:textStyle="bold" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/penaltyTeamA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="0"
                android:textColor="#000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/penaltyTeamAPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="penaltyAplus"
                android:text="@string/plus"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/penalty"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|center"
                android:animateLayoutChanges="false"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="fill" />

            <Button
                android:id="@+id/penaltyTeamBPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="penaltyBplus"
                android:text="@string/plus"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/penaltyTeamB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="0"
                android:textColor="#000"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/ic_notification_overlay"
            android:onClick="reset"
            android:text="@string/reset"

            />

      </LinearLayout>
  </ScrollView>

</LinearLayout>